# cdm-spark-events-importers

./: .gitignore  Dockerfile  README.md  RELEASE_NOTES.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini
.github/workflows/: test.yml
cdmeventimporters/: arg_checkers.py  checkm2.py  checkm2.yaml  utilities.py
s3_policies/: minio_create_bucket_entrypoint.sh  test-importers-read-write-policy.json
test/: arg_checkers_test.py  checkm2_test.py  utilities_test.py
test/utils/: misc.py  spark.py
